--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.nmdp</groupId>
     <artifactId>hml-fhir</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.20-SNAPSHOT</version>
+    <version>1.3.28-SNAPSHOT</version>
     
     <properties>
     	<swagger-codegen-version>2.2.2</swagger-codegen-version>
@@ -17,11 +17,12 @@
         <mongodb-version>3.4.0</mongodb-version>
         <log4j-version>1.2.17</log4j-version>
         <model-mapper-version>0.7.5</model-mapper-version>
-        <nmdp-models-version>1.15.0</nmdp-models-version>
+        <nmdp-models-version>1.18.0</nmdp-models-version>
         <gson-version>2.8.0</gson-version>
         <commons-io-version>1.4</commons-io-version>
         <joda-time-version>2.9.9</joda-time-version>
         <json-version>20160212</json-version>
+        <commons-lang-version>3.1</commons-lang-version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -126,6 +127,11 @@
                 <artifactId>json</artifactId>
                 <version>${json-version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang-version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -165,6 +171,10 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 </project>
